--- a/examples/adhoc/net80211_mesh/omnetpp.ini
+++ b/examples/adhoc/net80211_mesh/omnetpp.ini
@@ -109,7 +109,7 @@ description = "Aodv Simple test"
 **.host[*].udpAppType = "UDPBasicBurst"
 **.host[*].numUdpApps = 1
 **.host[*].udpApp[0].time_begin = uniform(20s,35s)
-**.host[*].udpApp[0].destAddresses = "random(inet.nodes.adhoc.MobileManetRoutingMesh)"
+**.host[*].udpApp[0].destAddresses = "random(inet.experimental.nodes.adhoc.MobileManetRoutingMesh)"
 
 **.udpApp[0].localPort = 1234
 **.udpApp[0].destPort = 1234
