Changes in the experimental mesh protocol to support dymo in the mac layer, now the protocol can use label or level 2 address to forward the message

--- a/examples/adhoc/net80211_mesh/omnetpp.ini
+++ b/examples/adhoc/net80211_mesh/omnetpp.ini
@@ -109,7 +109,10 @@ description = "Aodv Simple test"
 **.host[*].udpAppType = "UDPBasicBurst"
 **.host[*].numUdpApps = 1
 **.host[*].udpApp[0].time_begin = uniform(20s,35s)
-**.host[*].udpApp[0].destAddresses = "random(inet.experimental.nodes.adhoc.MobileManetRoutingMesh)"
+#**.host[*].udpApp[0].destAddresses = "random(inet.experimental.nodes.adhoc.MobileManetRoutingMesh)"
+**.host[0].udpApp[0].destAddresses = "host[4]"
+**.host[*].udpApp[0].destAddresses = ""
+
 
 **.udpApp[0].localPort = 1234
 **.udpApp[0].destPort = 1234
@@ -187,7 +190,7 @@ description = "Aodv Simple test"
 #**.networklayer.proxyARP = true  # Host's is hardwired "false"
 
 # manet routing
-**.manetrouting.manetmanager.routingProtocol="AODV"
+**.manetrouting.manetmanager.routingProtocol=""
 #**.routingProtocol.use-default=yes
 
 
@@ -200,9 +203,11 @@ description = "Aodv Simple test"
 #**.wlan.mgmt.use_mac = false
 
 
+**.wlan.useProactive = false
 
 # nic settings
-**.wlan.mgmt.frameCapacity = 10
+
+
 **.wlan.mac.address = "auto"
 **.wlan.mac.maxQueueSize = 14
 **.wlan.mac.rtsThresholdBytes = 3000B
