Add a Dymo Fau destructor to delete reserved memory

--- a/examples/adhoc/grid_aodv/omnetpp.ini
+++ b/examples/adhoc/grid_aodv/omnetpp.ini
@@ -66,7 +66,7 @@ cmdenv-express-mode = true
 **.udpApp[0].time_end=0s
 
 
-**.host*.mobilityType = "inet.mobility.Ns2MotionMobility"
+**.host*.mobilityType = "inet.mobility.NullMobility"
 **.host*.mobility.updateInterval = 0.1s
 **.host*.mobility.scrollX = 50
 **.host*.mobility.scrollY = 50
