improvement in the experimental link layer mesh protocol to use proactive and reactive routing protocol simultaneously

--- a/examples/adhoc/net80211_mesh/omnetpp.ini
+++ b/examples/adhoc/net80211_mesh/omnetpp.ini
@@ -18,7 +18,7 @@ description = "Aodv Simple test"
 **.vector-recording = false
 *.playgroundSizeX = 1500
 *.playgroundSizeY = 1500
-*.numFixHosts = 0
+*.numFixHosts = 1
 #*.numHosts=20
 *.numHosts=5
 #*.numBasic=35
@@ -27,14 +27,6 @@ description = "Aodv Simple test"
 **.coreDebug = false
 **.channelNumber = 0
 
-
-
-# channel physical parameters
-*.channelcontrol.carrierFrequency = 2.4GHz
-*.channelcontrol.pMax = 2.0mW
-*.channelcontrol.sat = -110dBm
-*.channelcontrol.alpha = 2
-*.channelcontrol.numChannels = 1
 
 # mobility
 **.fixhost[0].mobility.x = 499
@@ -110,8 +102,8 @@ description = "Aodv Simple test"
 **.host[*].numUdpApps = 1
 **.host[*].udpApp[0].time_begin = uniform(20s,35s)
 #**.host[*].udpApp[0].destAddresses = "random(inet.experimental.nodes.adhoc.MobileManetRoutingMesh)"
-**.host[0].udpApp[0].destAddresses = "host[4]"
-**.host[*].udpApp[0].destAddresses = ""
+#**.host[0].udpApp[0].destAddresses = "host[4]"
+**.host[*].udpApp[0].destAddresses = "fixhost[0]"
 
 
 **.udpApp[0].localPort = 1234
@@ -135,13 +127,9 @@ description = "Aodv Simple test"
 
 
 
-**.host[*].numUdpApps = 0
-
 **.fixhost[0].udpAppType = "UDPSink"
 **.fixhost[0].numUdpApps = 1
 **.fixhost[0].udpApp[0].localPort = 1234
-**.fixhost[0].x=-1
-**.fixhost[0].y=-1
 
 # tcp apps (off)
 **.numTcpApps = 0
@@ -203,7 +191,8 @@ description = "Aodv Simple test"
 #**.wlan.mgmt.use_mac = false
 
 
-**.wlan.useProactive = false
+**.host[*].wlan.useProactive = false
+**.wlan.useProactive = true
 
 # nic settings
 
@@ -227,6 +216,7 @@ description = "Aodv Simple test"
 *.channelcontrol.alpha = 2
 *.channelcontrol.numChannels = 1
 
+
 **.wlan.radio.transmitterPower=2.0mW
 **.wlan.radio.pathLossAlpha=2
 **.wlan.radio.snirThreshold = 4dB  # in dB
@@ -242,7 +232,9 @@ description = "Aodv Simple test"
 
 #**.use-default=yes
 
-**.broadCastDelay=uniform(0s,0.005s)
+# proccesing delay in the routing protocol, avoid syncronization
+**.broadCastDelay=uniform(0s,0.01s) # 10 mseconds 
+**.uniCastDelay=uniform(0s,0.005s)
 
 #/ parameters : DYMOUM
 **.no_path_acc_ = false
