New mobility model RestrictedConstSpeedMobility. This model can determine an area were the node must stay

--- a/examples/adhoc/mobility/omnetpp.ini
+++ b/examples/adhoc/mobility/omnetpp.ini
@@ -21,10 +21,20 @@ tkenv-plugin-path = ../../../etc/plugins
 
 [Config LinearMobility]
 **.host*.mobilityType = "LinearMobility"
-**.host*.mobility.speed = 50mps
-**.host*.mobility.angle = 30deg  # degrees
+**.host*.mobility.speed = 10mps
+**.host*.mobility.angle = normal(0deg, 360deg) #30deg  # degrees
 **.host*.mobility.acceleration = -0.5
 **.host*.mobility.updateInterval = 100ms
+
+[Config RestrictedConstsSpeed]
+**.host*.mobilityType = "RestrictedConstSpeedMobility"
+**.host*.mobility.vHost = 10mps
+**.host*.mobility.x1 = 100
+**.host*.mobility.y1 =  100
+**.host*.mobility.x2 =  400
+**.host*.mobility.y2 =  300
+#**.host*.mobility.acceleration = -0.5
+#**.host*.mobility.updateInterval = 100ms
 
 [Config MassMobility]
 *.numHosts = 5
