Stop using DSDV and use DYMOFAU routing protocol

--- a/classProject/omnetpp.ini
+++ b/classProject/omnetpp.ini
@@ -81,7 +81,7 @@ network = Test1
 
 ######################################################################
 # manet routing
-#**.manetrouting.manetmanager.routingProtocol = "DYMOFSM"
+**.manetrouting.manetmanager.routingProtocol = "DYMOFAU"
 #######################################################
 
 #**.broadCastDelay=uniform(0s,0.005s)
@@ -168,5 +168,5 @@ network = Test1
 #**.timetolive_routing_entry = 5s # // ;[seconds]
 #**.netmask = "255.255.0.0" # //
 #**.MaxVariance_DSDV = 1 
-**.RNGseed_DSDV = 0
+#**.RNGseed_DSDV = 0
 
