--- a/classProject/omnetpp.ini
+++ b/classProject/omnetpp.ini
@@ -29,7 +29,7 @@ network = Test1
 **.wlan.radio.pathLossAlpha=2
 **.wlan.radio.snirThreshold = 4dB  # in dB
 **.wlan.radio.bitrate=54Mbps 		
-**.wlan.radio.thermalNoise=-120dBm
+**.wlan.radio.thermalNoise=-160dBm
 **.wlan.radio.sensitivity=-110dBm   	
 **.wlan.radio.phyOpMode = 2 #1/2  802.11b/802.11g-only
 **.wlan.radio.channelModel = 1 #1/2  rayleigh/awgn
@@ -44,20 +44,19 @@ network = Test1
 *.Sink.tcpApp[0].port = 80
 *.Sink.tcpApp[0].replyDelay = 0
 
-*.Node1.numTcpApps = 1
-*.Node1.tcpAppType = "TCPBasicClientApp"
-*.Node1.tcpApp[0].address = ""
-*.Node1.tcpApp[0].port = -1
-*.Node1.tcpApp[0].connectAddress = "Sink"
-*.Node1.tcpApp[0].connectPort = 80
-
-*.Node1.tcpApp[0].startTime = exponential(5s)
-*.Node1.tcpApp[0].numRequestsPerSession = 1
-*.Node1.tcpApp[0].requestLength = truncnormal(3500B,200B)
-*.Node1.tcpApp[0].replyLength = exponential(200B)
-*.Node1.tcpApp[0].thinkTime = truncnormal(2s,3s)
-*.Node1.tcpApp[0].idleInterval = truncnormal(3600s,1200s)
-*.Node1.tcpApp[0].reconnectInterval = 30s
+*.Node*.numTcpApps = 1
+*.Node*.tcpAppType = "TCPBasicClientApp"
+*.Node*.tcpApp[0].address = ""
+*.Node*.tcpApp[0].port = -1
+*.Node*.tcpApp[0].connectAddress = "Sink"
+*.Node*.tcpApp[0].connectPort = 80
+*.Node*.tcpApp[0].startTime = exponential(5s)
+*.Node*.tcpApp[0].numRequestsPerSession = 1
+*.Node*.tcpApp[0].requestLength = truncnormal(350B,20B)
+*.Node*.tcpApp[0].replyLength = exponential(200B)
+*.Node*.tcpApp[0].thinkTime = truncnormal(2s,3s)
+*.Node*.tcpApp[0].idleInterval = truncnormal(36s,12s)
+*.Node*.tcpApp[0].reconnectInterval = 3s
 
 # tcp settings
 #**.tcp.mss = 1024
