modify routing algorithm to use powerArray in link costs

--- a/classProject/omnetpp.ini
+++ b/classProject/omnetpp.ini
@@ -27,10 +27,10 @@ network = Test1
 
 **.wlan.radio.transmitterPower=0.003mW
 **.wlan.radio.pathLossAlpha=2
-**.wlan.radio.snirThreshold = 4dB  # in dB
+**.wlan.radio.snirThreshold = 4dB  # in dB #!!!FIXME!!!
 **.wlan.radio.bitrate=54Mbps 		
-**.wlan.radio.thermalNoise=-160dBm
-**.wlan.radio.sensitivity=-110dBm   	
+**.wlan.radio.thermalNoise=-160dBm #!!!FIXME!!!
+**.wlan.radio.sensitivity=-110dBm  #!!!FIXME!!!  	
 **.wlan.radio.phyOpMode = 2 #1/2  802.11b/802.11g-only
 **.wlan.radio.channelModel = 1 #1/2  rayleigh/awgn
 **.wlan.radio.berTableFile="per_table_80211g_Trivellato.dat"
