Use modified DSR, fix useInterference parameter

--- a/classProject/omnetpp.ini
+++ b/classProject/omnetpp.ini
@@ -81,7 +81,8 @@ network = Test1
 
 ######################################################################
 # manet routing
-**.manetrouting.manetmanager.routingProtocol = "DYMOFAU"
+**.manetrouting.manetmanager.routingProtocol = "DSR"
+**.useInterference = true
 #######################################################
 
 #**.broadCastDelay=uniform(0s,0.005s)
