enable ETX, move route choice to top of file

--- a/classProject/omnetpp.ini
+++ b/classProject/omnetpp.ini
@@ -1,6 +1,10 @@
 [General]
 network = Test1
 
+**.manetrouting.manetmanager.routingProtocol = "DSR"
+**.ETX_Active = true
+**.useInterference = true
+
 *.playgroundSizeX = 500
 *.playgroundSizeY = 500
 
@@ -81,8 +85,7 @@ network = Test1
 
 ######################################################################
 # manet routing
-**.manetrouting.manetmanager.routingProtocol = "DSR"
-**.useInterference = true
+
 #######################################################
 
 #**.broadCastDelay=uniform(0s,0.005s)
