Add Interference-awareness to DYMO

--- a/classProject/omnetpp.ini
+++ b/classProject/omnetpp.ini
@@ -1,11 +1,10 @@
 [General]
-network = Test1
+network = Test3
 
-**.manetrouting.manetmanager.routingProtocol = "DSR"
-**.ETX_Active = true
-**.useInterference = true
+**.manetrouting.manetmanager.routingProtocol = "DYMOFAU"
+**.useInterference = false
 
-*.playgroundSizeX = 500
+*.playgroundSizeX = 1000
 *.playgroundSizeY = 500
 
 #control channel
@@ -55,12 +54,12 @@ network = Test1
 *.Node*.tcpApp[0].connectAddress = "Sink"
 *.Node*.tcpApp[0].connectPort = 80
 *.Node*.tcpApp[0].startTime = exponential(5s)
-*.Node*.tcpApp[0].numRequestsPerSession = 1
-*.Node*.tcpApp[0].requestLength = truncnormal(350B,20B)
-*.Node*.tcpApp[0].replyLength = exponential(200B)
-*.Node*.tcpApp[0].thinkTime = truncnormal(2s,3s)
-*.Node*.tcpApp[0].idleInterval = truncnormal(36s,12s)
+*.Node*.tcpApp[0].requestLength = truncnormal(3500B,200B)
+*.Node*.tcpApp[0].replyLength = exponential(2000B)
+*.Node*.tcpApp[0].idleInterval = truncnormal(5s,0.3s)
 *.Node*.tcpApp[0].reconnectInterval = 3s
+*.Node*.tcpApp[0].numRequestsPerSession = 1
+*.Node*.tcpApp[0].thinkTime = truncnormal(2s,3s)
 
 # tcp settings
 #**.tcp.mss = 1024
