Fix DYMO subscription, make TRSS a uint32, more network parameters, etc.

--- a/classProject/omnetpp.ini
+++ b/classProject/omnetpp.ini
@@ -1,16 +1,19 @@
 [General]
-network = Test3
+network = Test5
 
+sim-time-limit = 100s
 **.manetrouting.manetmanager.routingProtocol = "DYMOFAU"
 **.useInterference = false
 
 *.playgroundSizeX = 1000
 *.playgroundSizeY = 500
 
+**.attenuationModel="TwoRayModel"
+
 #control channel
 *.channelControl.carrierFrequency = 2.4GHz
-*.channelControl.pMax = 0.003mW
-*.channelControl.sat = -110dBm
+*.channelControl.pMax = 2mW
+*.channelControl.sat = -95dBm
 *.channelControl.alpha = 2
 *.channelControl.numChannels = 1
 
@@ -28,12 +31,12 @@ network = Test3
 **.wlan.mac.slotTime = 9us #
 **.wlan.mac.AIFSN = 2 #DIFS
 
-**.wlan.radio.transmitterPower=0.003mW
+**.wlan.radio.transmitterPower=1mW
 **.wlan.radio.pathLossAlpha=2
 **.wlan.radio.snirThreshold = 4dB  # in dB #!!!FIXME!!!
 **.wlan.radio.bitrate=54Mbps 		
-**.wlan.radio.thermalNoise=-160dBm #!!!FIXME!!!
-**.wlan.radio.sensitivity=-110dBm  #!!!FIXME!!!  	
+**.wlan.radio.thermalNoise=-110dBm 
+**.wlan.radio.sensitivity=-85dBm
 **.wlan.radio.phyOpMode = 2 #1/2  802.11b/802.11g-only
 **.wlan.radio.channelModel = 1 #1/2  rayleigh/awgn
 **.wlan.radio.berTableFile="per_table_80211g_Trivellato.dat"
@@ -53,10 +56,10 @@ network = Test3
 *.Node*.tcpApp[0].port = -1
 *.Node*.tcpApp[0].connectAddress = "Sink"
 *.Node*.tcpApp[0].connectPort = 80
-*.Node*.tcpApp[0].startTime = exponential(5s)
-*.Node*.tcpApp[0].requestLength = truncnormal(3500B,200B)
-*.Node*.tcpApp[0].replyLength = exponential(2000B)
-*.Node*.tcpApp[0].idleInterval = truncnormal(5s,0.3s)
+*.Node*.tcpApp[0].startTime = exponential(2s)
+*.Node*.tcpApp[0].requestLength = 3000B #truncnormal(3500B,200B)
+*.Node*.tcpApp[0].replyLength = 30B #exponential(200B)
+*.Node*.tcpApp[0].idleInterval = 1s #truncnormal(5s,0.3s)
 *.Node*.tcpApp[0].reconnectInterval = 3s
 *.Node*.tcpApp[0].numRequestsPerSession = 1
 *.Node*.tcpApp[0].thinkTime = truncnormal(2s,3s)
