--- a/classProject/omnetpp.ini
+++ b/classProject/omnetpp.ini
@@ -1,5 +1,5 @@
 [General]
-network = Test5
+network = Test4
 
 sim-time-limit = 100s
 **.manetrouting.manetmanager.routingProtocol = "DYMOFAU"
@@ -8,20 +8,14 @@ sim-time-limit = 100s
 *.playgroundSizeX = 1000
 *.playgroundSizeY = 500
 
+#**.attenuationModel="NakagamiModel" //FAILS WITH WIERD TCP QUEUE ERROR
 **.attenuationModel="TwoRayModel"
-
-#control channel
-*.channelControl.carrierFrequency = 2.4GHz
-*.channelControl.pMax = 2mW
-*.channelControl.sat = -95dBm
-*.channelControl.alpha = 2
-*.channelControl.numChannels = 1
 
 # nic settings
 **.wlan.mgmt.frameCapacity = 10
 **.wlan.mac.address = "auto"
 **.wlan.mac.maxQueueSize = 14
-**.wlan.mac.rtsThresholdBytes = 3000B
+#**.wlan.mac.rtsThresholdBytes = 3000B
 **.wlan.mac.bitrate = 54Mbps
 **.wlan.mac.basicBitrate = 6Mbps  # 24Mbps
 **.wlan.mac.retryLimit = 7
@@ -31,9 +25,9 @@ sim-time-limit = 100s
 **.wlan.mac.slotTime = 9us #
 **.wlan.mac.AIFSN = 2 #DIFS
 
-**.wlan.radio.transmitterPower=1mW
+**.wlan.radio.transmitterPower=2mW
 **.wlan.radio.pathLossAlpha=2
-**.wlan.radio.snirThreshold = 4dB  # in dB #!!!FIXME!!!
+**.wlan.radio.snirThreshold = 4dB
 **.wlan.radio.bitrate=54Mbps 		
 **.wlan.radio.thermalNoise=-110dBm 
 **.wlan.radio.sensitivity=-85dBm
@@ -52,17 +46,17 @@ sim-time-limit = 100s
 
 *.Node*.numTcpApps = 1
 *.Node*.tcpAppType = "TCPBasicClientApp"
-*.Node*.tcpApp[0].address = ""
-*.Node*.tcpApp[0].port = -1
 *.Node*.tcpApp[0].connectAddress = "Sink"
 *.Node*.tcpApp[0].connectPort = 80
 *.Node*.tcpApp[0].startTime = exponential(2s)
-*.Node*.tcpApp[0].requestLength = 3000B #truncnormal(3500B,200B)
+*.Node*.tcpApp[0].requestLength = 2000B #truncnormal(3500B,200B)
 *.Node*.tcpApp[0].replyLength = 30B #exponential(200B)
 *.Node*.tcpApp[0].idleInterval = 1s #truncnormal(5s,0.3s)
 *.Node*.tcpApp[0].reconnectInterval = 3s
-*.Node*.tcpApp[0].numRequestsPerSession = 1
-*.Node*.tcpApp[0].thinkTime = truncnormal(2s,3s)
+*.Node*.tcpApp[0].thinkTime = 0.5s #truncnormal(2s,3s)
+#*.Node*.tcpApp[0].numRequestsPerSession = 1
+#*.Node*.tcpApp[0].address = ""
+#*.Node*.tcpApp[0].port = -1
 
 # tcp settings
 #**.tcp.mss = 1024
@@ -83,7 +77,12 @@ sim-time-limit = 100s
 **.arp.cacheTimeout = 100s
 #**.networklayer.proxyARP = true  # Host's is hardwired "false"
 
-
+#channel control
+*.channelControl.carrierFrequency = 2.4GHz
+*.channelControl.pMax = 20mW
+*.channelControl.sat = -110dBm
+*.channelControl.alpha = 2
+*.channelControl.numChannels = 1
 
 ######################################################################
 # manet routing
