--- a/classProject/omnetpp.ini
+++ b/classProject/omnetpp.ini
@@ -9,7 +9,7 @@ sim-time-limit = 100s
 *.playgroundSizeY = 500
 
 #**.attenuationModel="NakagamiModel" //FAILS WITH WIERD TCP QUEUE ERROR
-**.attenuationModel="TwoRayModel"
+#**.attenuationModel="TwoRayModel"
 
 # nic settings
 **.wlan.mgmt.frameCapacity = 10
@@ -25,7 +25,7 @@ sim-time-limit = 100s
 **.wlan.mac.slotTime = 9us #
 **.wlan.mac.AIFSN = 2 #DIFS
 
-**.wlan.radio.transmitterPower=2mW
+**.wlan.radio.transmitterPower=1mW
 **.wlan.radio.pathLossAlpha=2
 **.wlan.radio.snirThreshold = 4dB
 **.wlan.radio.bitrate=54Mbps 		
@@ -50,7 +50,7 @@ sim-time-limit = 100s
 *.Node*.tcpApp[0].connectPort = 80
 *.Node*.tcpApp[0].startTime = exponential(2s)
 *.Node*.tcpApp[0].requestLength = 2000B #truncnormal(3500B,200B)
-*.Node*.tcpApp[0].replyLength = 30B #exponential(200B)
+*.Node*.tcpApp[0].replyLength = 20B #exponential(200B)
 *.Node*.tcpApp[0].idleInterval = 1s #truncnormal(5s,0.3s)
 *.Node*.tcpApp[0].reconnectInterval = 3s
 *.Node*.tcpApp[0].thinkTime = 0.5s #truncnormal(2s,3s)
@@ -79,8 +79,8 @@ sim-time-limit = 100s
 
 #channel control
 *.channelControl.carrierFrequency = 2.4GHz
-*.channelControl.pMax = 20mW
-*.channelControl.sat = -110dBm
+*.channelControl.pMax = 1mW
+*.channelControl.sat = -95dBm
 *.channelControl.alpha = 2
 *.channelControl.numChannels = 1
 
