config for final simulations

--- a/classProject/omnetpp.ini
+++ b/classProject/omnetpp.ini
@@ -3,10 +3,9 @@ network = Test4
 
 sim-time-limit = 100s
 **.manetrouting.manetmanager.routingProtocol = "DYMOFAU"
-**.useInterference = false
 
-*.playgroundSizeX = 1000
-*.playgroundSizeY = 500
+*.playgroundSizeX = 800
+*.playgroundSizeY = 550
 
 #**.attenuationModel="NakagamiModel" //FAILS WITH WIERD TCP QUEUE ERROR
 #**.attenuationModel="TwoRayModel"
@@ -80,7 +79,7 @@ sim-time-limit = 100s
 #channel control
 *.channelControl.carrierFrequency = 2.4GHz
 *.channelControl.pMax = 1mW
-*.channelControl.sat = -95dBm
+#*.channelControl.sat = -95dBm
 *.channelControl.alpha = 2
 *.channelControl.numChannels = 1
 
